--- a/documentations/user-manual/inforex-user-manual.tex
+++ b/documentations/user-manual/inforex-user-manual.tex
@@ -142,6 +142,36 @@ Within a corpus documents are divided into subcorpors. Before adding new documen
 \section{Document perspectives}
 %------------------------------------------------------------------------------
 
+\subsection{Available perspectives}
+
+\begin{tabular}{lcp{8cm}}
+  \hline
+  \multicolumn{3}{c}{Presentation} \\
+  \hline
+  • \textbf{Viewe}\\
+  • \textbf{View Document}\\
+  • \textbf{View Content}\\
+  • \textbf{View Anaphora}\\
+  • \textbf{Transcription}\\
+  • \textbf{Topis}\\
+  • \textbf{History of changes}\\
+  • \textbf{TEI}\\
+  • \textbf{Tokenization} \\
+  \hline
+  \multicolumn{3}{c}{Modification}\\
+  \hline
+  • \textbf{TaKIPI}\\  
+  • \textbf{Edit Metadata}\\
+  • \textbf{Edit Content}\\
+  • \textbf{Edit Anaphora}\\
+  • \textbf{Annotator} & --- & Perspective for annotation and relation modification. \\
+  • \textbf{Bootstrapping}\\
+  • \textbf{WSD}\\
+  • \textbf{Magane images}\\
+  \hline
+\end{tabular}
+
+
 %------------------------------------------------------------------------------
 \section{Flags}
 %------------------------------------------------------------------------------
